tests/cases_invalid/struct_gpu/.expected
error: missing layout definition for the `gpu` struct `nolayout`
 --> ./cases_invalid/struct_gpu/main.shd:6:19
  |
6 | gpu(vec3i) struct nolayout {
  | ----------        ^^^^^^^^ invalid struct definition
  | |
  | info: `gpu` structs should have a `layout`
  |

error: missing layout definition for the `gpu` struct `vec3i`
  --> ./cases_invalid/struct_gpu/main.shd:12:12
   |
12 | gpu struct vec3i {
   | ---        ^^^^^ invalid struct definition
   | |
   | info: `gpu` structs should have a `layout`
   |

error: could not find `mat4f` type
  --> ./cases_invalid/struct_gpu/main.shd:18:11
   |
18 | gpu(array<mat4f, 2>) struct unknown_gpu_generic_type {
   |           ^^^^^ undefined type
   |

error: invalid `gpu` array generic params
  --> ./cases_invalid/struct_gpu/main.shd:21:1
   |
21 | gpu(array<2, 2>) struct invalid_gpu_array_item_type {
   | ^^^^^^^^^^^^^^^^ `gpu` array should have two generic arguments (a type and a non-zero positive 32-bit integer)
   |

error: invalid `gpu` array generic params
  --> ./cases_invalid/struct_gpu/main.shd:24:1
   |
24 | gpu(array<i32, i32>) struct invalid_gpu_array_length {
   | ^^^^^^^^^^^^^^^^^^^^ `gpu` array should have two generic arguments (a type and a non-zero positive 32-bit integer)
   |

error: invalid `gpu` array generic params
  --> ./cases_invalid/struct_gpu/main.shd:27:1
   |
27 | gpu(array<i32, true>) struct invalid_gpu_array_length2 {
   | ^^^^^^^^^^^^^^^^^^^^^ `gpu` array should have two generic arguments (a type and a non-zero positive 32-bit integer)
   |

error: could not find `vec2i(i32, i32)` function
  --> ./cases_invalid/struct_gpu/main.shd:30:11
   |
30 | buf vec = vec2i(1, 2);
   |           ^^^^^^^^^^^ undefined function
   |
